# airline-analytics-platform

./: .gitignore  MASTER_PLAN.md  README.md  export_duckdb.py  nixpacks.toml  pyproject.toml  requirements.txt  start.sh
backend/: config.py  main.py  requirements.txt
backend/models/: schemas.py
backend/routers/: analytics.py  chatbot.py  export.py
backend/services/: chatbot_engine.py  query_engine.py
dashboard/excel/: airline_analytics.xlsx
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: analytics 2.ts  analytics.ts  client.ts
frontend/src/components/: Footer.tsx  Globe.tsx  InsightCard.tsx  KPICard.tsx  Navbar.tsx  ParticleField.tsx
frontend/src/components/charts/: CarrierRankChart.tsx  ChartWrapper.tsx  ChatResponseChart.tsx  DelayCauseChart.tsx  HeatmapChart.tsx  HourlyDelayChart.tsx  MonthlyTrendChart.tsx
frontend/src/hooks/: useAnalytics 2.ts  useAnalytics.ts  useInView.ts
frontend/src/pages/: Chatbot.tsx  Dashboard.tsx  Home.tsx  Insights.tsx  Landing.tsx
frontend/src/theme/: colors.ts
python-analysis/: 01_eda.py  02_delay_analysis.py  03_airport_analysis.py  04_seasonal_trends.py  05_ml_model.py  06_export_excel.py
python-analysis/utils/: __init__.py  chart_styles.py
scripts/: process_data.py
sql/: 00_schema.sql  01_data_quality.sql  02_exploratory.sql  03_advanced_analytics.sql
